--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,2 +1,14 @@
 <% layout("layouts/boilerplate") %>
-<h1>Hello!</h1>
+<div class="row">
+  <div class="col-8 offset-2">
+    <img
+      class="img-fluid"
+      src="https://media0.giphy.com/media/mlBDoVLOGidEc/200.webp?cid=790b7611ed0054mbp8fmzhzu4j9jrpevijxwucp53rp2ls0o&ep=v1_gifs_search&rid=200.webp&ct=g"
+    />
+  </div>
+</div>
+<div class="row mt-5">
+  <div class="col-10 offset-1">
+    <h1 class="text-center text-light">Under promise, over deliver</h1>
+  </div>
+</div>
