--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,5 +1,9 @@
-<nav class="navbar sticky-top navbar-expand-lg bg-dark" data-bs-theme="dark">
+<nav
+  class="navbar sticky-top navbar-expand-lg bg-dark py-4"
+  data-bs-theme="dark"
+>
   <div class="container-fluid">
+    <a class="navbar-brand" href="/campgrounds">Evan Martincek</a>
     <button
       class="navbar-toggler"
       type="button"
