--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -17,6 +17,9 @@
       body {
         background-image: url("https://images.unsplash.com/photo-1519010470956-6d877008eaa4?w=400&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTl8fGNpdHl8ZW58MHx8MHx8fDA%3D");
       }
+      .bioexp {
+        background-color: lightgrey;
+      }
     </style>
   </head>
   <body class="d-flex flex-column vh-100">
