--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -18,8 +18,8 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a class="nav-link" href="/">Home</a>
-        <a class="nav-link" href="/">Bio</a>
-        <a class="nav-link" href="/">Experience</a>
+        <a class="nav-link" href="/bio">Bio</a>
+        <a class="nav-link" href="/experience">Experience</a>
         <a class="nav-link" href="/">Portfolio</a>
       </div>
     </div>
