add portfolio skeleton

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -20,7 +20,7 @@
         <a class="nav-link" href="/">Home</a>
         <a class="nav-link" href="/bio">Bio</a>
         <a class="nav-link" href="/experience">Experience</a>
-        <a class="nav-link" href="/">Portfolio</a>
+        <a class="nav-link" href="/portfolio">Portfolio</a>
       </div>
     </div>
   </div>
