--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -10,17 +10,7 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
-    <style>
-      img {
-        width: 100%;
-      }
-      body {
-        background-image: url("https://images.unsplash.com/photo-1519010470956-6d877008eaa4?w=400&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTl8fGNpdHl8ZW58MHx8MHx8fDA%3D");
-      }
-      .bioexp {
-        background-color: lightgrey;
-      }
-    </style>
+    <link rel="stylesheet" href="app.css" />
   </head>
   <body class="d-flex flex-column vh-100">
     <%- include("../partials/navbar") %>
