--- a/public/app.css
+++ b/public/app.css
@@ -22,18 +22,6 @@ body {
 
 .bioexp h1 {
   text-shadow: #ffa500 1px 0 3px;
-  background-image: linear-gradient(#7df9ff, #7df9ff);
-  background-size: 0% 0.1em;
-  background-position-y: 100%;
-  background-position-x: 0%;
-  background-repeat: no-repeat;
-  transition: 0.2s ease-in-out;
-  text-decoration: none;
-}
-
-.bioexp h1:hover {
-  text-shadow: #7df9ff 1px 0 3px;
-  background-size: 100% 0.1em;
 }
 
 .nav-link {
@@ -57,4 +45,15 @@ body {
   position: relative;
   left: 0;
   top: 0;
+}
+
+#bioParagraph {
+  line-height: 2.5em;
+  font-size: 1.1em;
+}
+
+#linkedInLogo {
+  border-radius: 50px;
+  height: 40px;
+  width: 40px;
 }
