add info to experience page

--- a/views/experience.ejs
+++ b/views/experience.ejs
@@ -2,47 +2,21 @@
 <div class="row bioexp py-4">
   <div class="col-10 offset-1">
     <h1 class="mb-5">Experience</h1>
-    <p>
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Placeat
-      architecto velit iure! Maxime fugiat aliquid perspiciatis voluptatem illo
-      aspernatur quis dolore necessitatibus consequatur commodi, provident
-      numquam praesentium nam quo porro? Voluptatem, aliquam. Laborum nam
-      quisquam dolorem ipsa, distinctio temporibus dicta culpa atque natus
-      asperiores. Nisi eligendi quas qui iure. Dignissimos velit eligendi modi
-      numquam obcaecati nam blanditiis iure at voluptatum? Fugit perspiciatis
-      sunt dolorum omnis totam similique praesentium nulla ut soluta quam,
-      explicabo modi inventore tempora eveniet facilis amet impedit harum quae
-      ullam, dolor dignissimos. Repudiandae nobis veniam mollitia incidunt.
-      Perferendis vel porro architecto ipsa sunt nulla commodi delectus! Quia
-      veniam, debitis asperiores at nisi animi placeat rerum illum! Doloribus
-      vitae quis similique esse sit laudantium ducimus pariatur obcaecati
-      maiores! Modi veritatis consequuntur perferendis doloremque vel excepturi
-      eos, omnis aliquam velit repellat minima, aut aliquid, adipisci
-      voluptatem! Velit architecto nobis, quasi consequatur est neque, tenetur
-      sit, beatae provident nisi perspiciatis! Quisquam cum, perferendis libero
-      molestias repellat labore officiis at qui voluptate deleniti delectus
-      facere ipsum architecto. Praesentium, veritatis, natus placeat et fuga
-      reprehenderit qui accusamus fugiat dolores facere excepturi ipsa. Possimus
-      reiciendis placeat voluptatum, maxime eaque minima nesciunt inventore
-      dolore ad harum quibusdam impedit cupiditate delectus facilis dolores
-      repudiandae accusamus eveniet? Tempora quia, ab voluptates quae
-      necessitatibus dicta quasi? Distinctio! Neque enim et qui doloremque
-      nesciunt? Molestias atque ut voluptatibus vel ab, culpa, perspiciatis
-      voluptatum nemo consectetur perferendis doloribus nisi reprehenderit!
-      Tenetur laborum aperiam ducimus reprehenderit velit modi eius adipisci!
-      Quaerat perferendis ab cupiditate tempora, totam repellendus quisquam
-      inventore earum ad aut? Eveniet, reprehenderit repudiandae? Aliquid,
-      saepe? Debitis consectetur aut esse veritatis dolor laboriosam, nostrum
-      error et itaque rem. Fuga. Et facere recusandae, labore harum ex illum ab
-      fugit deleniti temporibus fuga at, vitae quisquam dolorum. Pariatur, ad
-      error magnam, deleniti sint obcaecati, ex provident quisquam minus ut unde
-      voluptatem? Neque, expedita sapiente. Aliquam, ducimus molestiae. Officia,
-      amet. Quasi fugiat a reprehenderit? Architecto veritatis quae sint ipsum
-      explicabo doloremque assumenda aliquid, quia enim distinctio ipsam, rem,
-      similique veniam ad quisquam. Ratione maiores aspernatur beatae harum odit
-      placeat reprehenderit, est consectetur suscipit earum voluptatem
-      asperiores, a dolorum rerum totam aliquid, veniam vitae dolor rem non sunt
-      saepe expedita. Ipsa, culpa officia.
-    </p>
+    <section>
+      <ul id="expList">
+        <li>
+          <img class="logo" src="amspools.jpg" /> Lifeguard | AMS Pools | March
+          2018 - September 2018
+        </li>
+        <li>
+          <img class="logo" src="qT.png" /> Clerk | QuikTrip | November | 2018 -
+          January 2024
+        </li>
+        <li>
+          <img class="logo" src="qT.png" /> Software Engineering Intern |
+          QuikTrip | January 2024 - Present
+        </li>
+      </ul>
+    </section>
   </div>
 </div>
