--- a/public/app.css
+++ b/public/app.css
@@ -52,7 +52,11 @@ body {
   font-size: 1.1em;
 }
 
-#linkedInLogo {
+#expList {
+  line-height: 3.5em;
+}
+
+.logo {
   border-radius: 50px;
   height: 40px;
   width: 40px;
