--- a/views/experience.ejs
+++ b/views/experience.ejs
@@ -3,7 +3,7 @@
   <div class="col-10 offset-1">
     <h1 class="mb-5">Experience</h1>
     <section>
-      <ul id="expList">
+      <ul class="expList">
         <li>
           <img class="logo" src="amspools.jpg" /> Lifeguard | AMS Pools | March
           2018 - September 2018
@@ -18,5 +18,29 @@
         </li>
       </ul>
     </section>
+  </div>
+</div>
+<div class="row bioexp py-4 my-5">
+  <div class="col-10 offset-1">
+    <h2>Frontend Development</h2>
+    <ul class="expList">
+      <li><img src="html.png" class="logo" /> HTML</li>
+      <li><img src="css.png" class="logo" /> CSS</li>
+      <li><img src="javascript.png" class="logo" /> JavaScript</li>
+    </ul>
+  </div>
+</div>
+<div class="row bioexp py-4 my-5">
+  <div class="col-10 offset-1">
+    <h2>Backend Development</h2>
+    <ul class="expList">
+      <li><img src="node.png" class="logo" /> Node.js</li>
+      <li><img src="mongoose.png" class="logo" /> Mongoose.js</li>
+      <li><img src="sql.png" class="logo" /> SQL</li>
+      <li><img src="python.png" class="logo" /> Python</li>
+      <li><img src="c.png" class="logo" /> C#</li>
+      <li><img src="net.png" class="logo" /> .NET</li>
+      <li><img src="git.png" class="logo" /> Git</li>
+    </ul>
   </div>
 </div>
