--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,6 @@
 </div>
 <div class="row mt-5">
   <div class="col-10 offset-1">
-    <h1 class="text-center text-light">Under promise, over deliver</h1>
+    <h1 class="text-center text-light neon">Under promise, over deliver</h1>
   </div>
 </div>
